feat: add routes

--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,22 @@
   @tailwind components;
   @tailwind utilities;
 }
+
+:root {
+  --body-bg: var(--p-surface-50);
+  --body-text-color: var(--p-surface-900);
+  --card-border: 1px solid var(--border-color);
+  --card-bg: var(--p-surface-0);
+  --border-color: var(--p-surface-200);
+  --text-color: var(--p-surface-700);
+  --overlay-background: #ffffff;
+}
+
+html {
+  font-size: 14px;
+}
+
+body,
+#app {
+  @apply h-screen;
+}
