--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,13 @@ body,
 
 .custom-height {
   @apply h-screen;
-  height: calc(100vh - 65px);
+  height: calc(100vh - 200px);
+}
+
+@media (min-width: 640px) { 
+  .custom-height {
+    height: calc(100vh - 100px);
+  }
 }
 
 *::-webkit-scrollbar {
